# pyBASS

./: pyproject.toml
examples/: ex1.ipynb  ex2.ipynb
pyBASS/: BASS.py  __init__.py  sobol.py  utils.py
tests/: test_bassPCA_fit.py  test_bass_fit.py  test_sobolBasis.py
